Did actually so much. Fixed lots of bugs, still need to fix issue with apostraphe encoding

--- a/src/components/VideoDetail.css
+++ b/src/components/VideoDetail.css
@@ -1,6 +1,23 @@
 .playingVideo {
 }
 
-.playingVideoContainer {
+.playingVideoDetails {
+    padding-left: 1em;
+    width: 100%;
+}
+
+.videoTitle {
+
+}
+
+.publishDate {
+
+}
+
+.channelTitle {
+
+}
+
+.videoDescription {
 
 }
