--- a/src/components/VideoItem.css
+++ b/src/components/VideoItem.css
@@ -1,7 +1,11 @@
 .videoItemFlexbox {
     display: flex;
     padding-bottom: 1em;
-    padding-right: 3em;
+    padding-right: 1em;
+}
+
+.videoItemFlexbox:hover {
+    cursor: pointer;
 }
 
 .videoDetailsContainer {
@@ -9,9 +13,24 @@
 
 }
 .videoImage {
-    width: 16em;
-    height: 9em;
+    width: 12em !important;
+    height: 6.75em !important;
 }
 .videoTitle {
     font-weight: bold;
 }
+
+.videoPlaceholder {
+
+}
+
+.videoPlaceholderImage {
+    background: lightgray;
+    width: 12em !important;
+    height: 6.75em !important;
+}
+
+.blurryText {
+    color: transparent;
+    text-shadow: 0 0 5px rgba(0,0,0,0.5);
+ }
