--- a/src/layout/Header.css
+++ b/src/layout/Header.css
@@ -1,13 +1,22 @@
 #header {
     background: #ff0000;
 }
+
 .header {
-    min-height: 22em;
+    min-height: 12em;
     padding-top: 3em;
     width: 100%;
     color: white;
     display: flex;
     justify-content: center;
+}
+
+.fadeOut{
+    background: orange !important;
+
+}
+.fadeIn {
+    background: cyan;
 }
 
 .header div {
@@ -16,7 +25,7 @@
 }
 
 .headerImg {
-    width: 15em;
+    width: 8em;
     height: auto;
     border-radius: 50%;
     margin-left: 2em;
@@ -25,6 +34,7 @@
 
 .header h1 {
     font-size: 2.1em;
+    font-weight: bold;
 }
 
 .header p {
@@ -47,6 +57,16 @@
     padding-right: .8em;
     padding-bottom: .3em;
     font-size: 1.2em;
+}
+
+.iconWrapper {
+    font-size: 2em;
+    margin-right: .2em;
+}
+
+.iconText {
+    font-size: 1em;
+    vertical-align: middle;
 }
 
 .githubIcon:hover {
@@ -77,7 +97,7 @@
     }
 
     .header {
-        min-height: 24em;
+        min-height: 12em;
         padding-bottom: 3em;
     }
 
