Completed initial working version, added prototype outlines when data has not arrived yet (todo: responsiveness and video details)

--- a/src/layout/NavigationBar.css
+++ b/src/layout/NavigationBar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: #212121;
+    background: #ff0000;
 }
 
 .navbar span {
@@ -9,4 +9,8 @@
 .navbarLogo {
     width: 30px;
     height: 30px;
+}
+
+.centeredNavbarElement {
+    font-weight: bold;
 }
