--- a/src/components/VideoItem.css
+++ b/src/components/VideoItem.css
@@ -2,6 +2,7 @@
     display: flex;
     padding-bottom: 1em;
     padding-right: 1em;
+    justify-content: space-between;
 }
 
 .videoItemFlexbox:hover {
@@ -10,11 +11,12 @@
 
 .videoDetailsContainer {
     padding-left: .5em;
-
+    flex-basis: .8;
+    flex-grow: 1;
+    
 }
 .videoImage {
-    width: 12em !important;
-    height: 6.75em !important;
+
 }
 .videoTitle {
     font-weight: bold;
@@ -22,6 +24,11 @@
 
 .videoPlaceholder {
 
+}
+
+.videoImageContainer {
+    flex-basis: .1;
+    flex-grow: 0;
 }
 
 .videoPlaceholderImage {
